// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`axs component accepts css prop 1`] = `
<div
  className="css-1bllz5t"
/>
`;

exports[`axs component accepts style props 1`] = `
<div
  className="css-1quk3ms"
/>
`;

exports[`axs returns a react component 1`] = `
<div
  className=""
/>
`;

exports[`snapshots 1`] = `
<div
  className=""
/>
`;

exports[`snapshots 2`] = `
<div
  className=""
/>
`;

exports[`snapshots 3`] = `
<div
  className="css-1cqgl9p"
/>
`;

exports[`snapshots 4`] = `
<div
  className="css-12alag6"
/>
`;

exports[`snapshots 5`] = `
<div
  className="css-1t9uipm"
/>
`;
